feat: 实现更多基础功能

--- a/WpfStudentChat/WpfStudentChat.csproj
+++ b/WpfStudentChat/WpfStudentChat.csproj
@@ -21,4 +21,8 @@
     <Folder Include="Views\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibStudentChat\LibStudentChat.csproj" />
+  </ItemGroup>
+
 </Project>
