--- a/WpfStudentChat.Server/WpfStudentChat.Server.csproj
+++ b/WpfStudentChat.Server/WpfStudentChat.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -15,6 +15,10 @@
 
   <ItemGroup>
     <Folder Include="Utilities\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LibStudentChat\LibStudentChat.csproj" />
   </ItemGroup>
 
 </Project>
