feat: 优化客户端逻辑, 实现更多服务端接口

--- a/WpfStudentChat/WpfStudentChat.csproj
+++ b/WpfStudentChat/WpfStudentChat.csproj
@@ -42,6 +42,10 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Messages\" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
