--- a/WpfStudentChat/WpfStudentChat.csproj
+++ b/WpfStudentChat/WpfStudentChat.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EleCho.WpfUtilities.BindingProxy" Version="1.0.0" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.77" />
     <PackageReference Include="WPF-UI" Version="3.0.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
@@ -40,10 +41,6 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\Messages\" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
