添加好友请求圆点, 修复excel导入bug, 增加ai聊天

--- a/WpfStudentChat/appsettings.json
+++ b/WpfStudentChat/appsettings.json
@@ -1,3 +1,6 @@
 ﻿{
-    "BaseUri": "http://localhost:5270"
+  "BaseUri": "http://localhost:5270",
+  "OpenAi": {
+    "Api-Key": "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"
+  }
 }
