--- a/WpfStudentChat/WpfStudentChat.csproj
+++ b/WpfStudentChat/WpfStudentChat.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="EleCho.WpfSuite" Version="0.0.10" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.77" />
     <PackageReference Include="NPOI" Version="2.7.0" />
+    <PackageReference Include="OpenAI-DotNet" Version="7.7.6" />
     <PackageReference Include="ValueConverters" Version="3.0.26" />
     <PackageReference Include="WPF-UI" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
