--- a/StudentChat.Server/appsettings.json
+++ b/StudentChat.Server/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "https_port": 7000,
   "AppConfig": {
     "JwtSecret": "{ABFCC3AC-6ACA-4739-94C9-3D724808B6F4}{ABFCC3AC-6ACA-4739-94C9-3D724808B6F4}",
     "JwtIssuer": "Senpai",
@@ -6,11 +7,25 @@
     "ManagerUserName": "admin",
     "ManagerPassword": "1234"
   },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "http://*:7000",
+        "Certificate": {
+          "Path": "server.pem", // 证书路径
+          "KeyPath": "server.key" // 私钥路径
         }
-    },
-    "AllowedHosts": "*"
+      }
+    }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MySql": "Server=127.0.0.1;Database=chat;Port=10143;uid=root;pwd=123456"
+  }
 }
