--- a/WpfStudentChat/appsettings.json
+++ b/WpfStudentChat/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "BaseUri": "http://localhost:5270",
+  "BaseUri": "https://127.0.0.1:7000", // https://{域名}:443
   "OpenAi": {
     "Api-Key": "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"
   }
